--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -41,7 +41,7 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_achievements: yes
-          plugin_achievements_display: compact
+          plugin_achievements_display: detailed
           plugin_achievements_limit: 12
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
