--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -43,6 +43,7 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_limit: 12
+          plugin_achievements_ignored: follower, member
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
