--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -41,6 +41,7 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_achievements: yes
+          plugin_achievements_threshold: X
           plugin_achievements_display: detailed
           plugin_achievements_limit: 50
           plugin_achievements_ignored: follower, member, automator
