--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -41,10 +41,10 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_achievements: yes
-          plugin_achievements_threshold: X
+          plugin_achievements_threshold: C
           plugin_achievements_display: detailed
-          plugin_achievements_limit: 50
-          plugin_achievements_ignored: follower, member, automator
+          plugin_achievements_limit: 12
+          plugin_achievements_ignored: follower, member, automator, infographile, stargazer
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
