--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -58,6 +58,8 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_languages_indepth: true
+          plugin_languages_indepth_custom: 6210a/auton-help, 6210a/6210A.github.io
           plugin_lines: yes
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
