--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -46,8 +46,8 @@ jobs:
           plugin_achievements_limit: 12
           plugin_achievements_ignored: follower, member, automator, infographile, stargazer
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_analysis_timeout: 30
+          plugin_languages_analysis_timeout_repositories: 15
           plugin_languages_categories: markup, programming
           plugin_languages_ignored: tex, shaderlab, hlsl
           plugin_languages_colors: github
@@ -58,6 +58,7 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_languages_indepth: true
           plugin_languages_indepth_custom: 6210a/auton-help, 6210a/6210A.github.io
           plugin_lines: yes
           plugin_lines_history_limit: 1
